# kare

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  ci.rs  config.rs  db.rs  lib.rs  model.rs  render.rs
crates/core/src/parser/: junit.rs  mod.rs
crates/core/tests/: analysis.rs  db.rs  parse_phpunit.rs  render.rs  schema_contract.rs
crates/core/tests/fixtures/: phpunit-11.xml
