[package]
name = "kare"
description = "Prune your test suite — deletion triage from CI artifacts and run history. Built for PHPUnit, accepts any JUnit XML"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kare-core = { path = "../core", version = "0.0.1" }
clap = { version = "4", features = ["derive"] }
