[package]
name = "kare"
description = "Prune your test suite — deletion triage from CI artifacts and run history. Built for PHPUnit, accepts any JUnit XML"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kare-core = { path = "../core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.103"
serde_json = "1"
time = "0.3.45"
