[package]
name = "kare-core"
description = "Core parsing and analysis logic for kare, a test pruning triage tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quick-xml = "0.37"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
time = { version = "0.3.45", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3.27.0"
